Improve serializer, refactor NNF detection heuristic